# Agentic-AI

./: .gitignore  app.py  deepagent.ipynb  et --soft HEAD~1  guardrails.ipynb  k_pip install git-filter-repo  llm_evaluation.ipynb  practice.ipynb  pyproject.toml  requirements.txt
RAG/: document.ipynb  pdfloader.ipynb
RAG/src/: embedding.py  search.py  vectorstore.py
UpdatedLangChain/: 1-langchainintro.ipynb  2-modelintergation.ipynb  3-tools.ipynb  4-messages.ipynb  5-structuredoutput.ipynb  6-middleware.ipynb
UpdatedLangGraph/1-BasicChatBot/: 1-basicchatbot.ipynb
UpdatedLangGraph/2-HumanAssistance/: humanintheloop.ipynb
data/vector_store/: chroma.sqlite3
