[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "deepagents>=0.6.8",
    "faiss-cpu>=1.14.2",
    "groq>=0.37.1",
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.3",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.1",
    "langsmith>=0.8.5",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "tavily-python>=0.7.26",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "langchain",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.3",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "python-dotenv>=1.2.2",
]

